<resources>
    <string name="app_name">JXPrintDemo</string>
    <string name="connect_printer">连接打印机</string>
    <string name="disconnect_printer">断开打印机</string>
    <string name="print_setting">打印设置</string>
    <string name="print_text">文本打印</string>
    <string name="print_barcode">条码打印</string>
    <string name="print_picture">图片打印</string>
    <string name="system_update">系统升级</string>
    <string name="paper_feed">走纸</string>
    <string name="paper_back">退纸</string>
    <string name="print_self_page">打印自检页</string>
    <string name="fatigue_test">疲劳测试</string>
    <string name="start_fatigue_test">开始</string>
    <string name="stop_fatigue_test">停止</string>
    <string name="normal_print">热敏纸打印测试</string>
    <string name="label_print">标签纸打印测试</string>

    <string name="toast_success">连接成功</string>
    <string name="toast_fail">连接失败</string>
    <string name="toast_close">连接关闭</string>
    <string name="toast_operation_success">成功</string>
    <string name="toast_operation_fail">失败</string>

    <string name="example_text">打印演示文本：abc123\n</string>

    <!--main-->
    <string name="status_disconnect">未连接</string>
    <string name="device_name">设备名称：</string>
    <string name="device_address">设备地址：</string>

    <!--设置页面-->
    <string name="title_paper_type">纸类型：</string>
    <string name="title_density">浓度：</string>
    <string name="confirm_setting">确认设置</string>
    <string name="normal_paper">热敏纸</string>
    <string name="label_paper">标签纸</string>
    <string name="print_normal_paper">普通热敏纸测试</string>
    <string name="print_label_paper">标签纸测试</string>
    <string name="btn_aligning">标签对齐</string>

    <string name="toast_error_tips">请先连接打印机</string>

    <!--文本打印页面-->
    <string name="text_note_ex">小票打印示例</string>
    <string name="text_code_ex">代码页打印示例</string>
    <string name="text_table_ex">表格打印示例</string>
    <string name="text_edit_title">编辑文字</string>
    <string name="text_check_hex">十六进制</string>
    <string name="send_print">发送打印</string>
    <string name="text_print_test">This is just a test!</string>
    <string name="text_print_test_hex">0x54 0x68 0x69 0x73 0x20 0x69 0x73 0x20 0x6a 0x75 0x73 0x74 0x20 0x61 0x20 0x74 0x65 0x73 0x74 0x21 0x0a 0x0d</string>
    <string name="print">打印</string>

    <!--图片打印-->
    <string name="picture_local_photo">本地选择图片打印</string>
    <string name="picture_bitmap_print">打印预置二值图</string>
    <string name="picture_canvas_print">画布方式</string>
    <string name="print_bitmap_test">打印单色位图演示：\n</string>
    <string name="print_bitmap_end_test">打印结束\n</string>

    <!--条码打印-->
    <string name="barcode_print_ex">一维码打印示例</string>
    <string name="qr_code_print_ex">二维码打印示例</string>
    <string name="scan_print_ex">扫一扫打印</string>
    <string name="barcode_fragment">一维码</string>
    <string name="qr_code_fragment">二维码</string>
    <string name="code_type">条码类型：</string>
    <string name="code_content">编辑条码内容：</string>
    <string name="code_len">(条码长度)</string>
    <string name="code_content_ex">012345678912</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="toast_content_illegal">请输入合法字符\n</string>
    <string name="toast_code39_legal">0–9、A–Z、$、%、+、空格</string>
    <string name="toast_code_bar_legal">0–9、A–D、$、+、-、.、/、:</string>
    <string name="toast_number_legal">0–9</string>
    <string name="toast_content_length">内容长度错误</string>
    <string name="toast_len_code128">(2 ≤ length ≤ 255)</string>
    <string name="toast_len_upc">(11 ≤ length ≤ 12)</string>
    <string name="toast_len_ean13">(12 ≤ length ≤ 13)</string>
    <string name="toast_len_ean8">(7 ≤ length ≤ 8)</string>
    <string name="toast_len_def">(1 ≤ length ≤ 255)</string>

    <!-- TextPrintActivity -->
    <string name="text_input">请输入文字:</string>
    <string name="hex_close">十六进制关</string>
    <string name="hex_open">十六进制开</string>
    <string name="content_to_print">请输入要打印的文字。。。</string>
    <string name="print_note">小票打印示例</string>
    <string name="example_for_codepage_print">代码页打印示例</string>
    <string name="company_name">打印机公司</string>
    <string name="shop_company_title">宁波月湖店</string>
    <string name="shop_num">门店号：</string>
    <string name="shop_note_num">单据号：</string>
    <string name="shop_cashier_num">收银员：</string>
    <string name="shop_receipt_date">单据日期：</string>
    <string name="shop_print_time">打印时间：</string>
    <string name="shop_goods_number">数量：</string>
    <string name="shop_goods_total_price">总计：</string>
    <string name="shop_payment">付款：</string>
    <string name="shop_change">找零：</string>
    <string name="shop_company_name">公司名称：江苏某某家居用品有限公司</string>
    <string name="shop_company_site">公司网址：</string>
    <string name="shop_company_address">地址：江苏省宁波市某某路某某号</string>
    <string name="shop_company_tel">电话：</string>
    <string name="shop_Service_Line">服务专线：</string>
    <string name="shop_thanks">谢谢惠顾,欢迎再次光临！</string>
    <string name="shop_demo">Demo 版本！</string>
    <string name="note_title">品名;数量;单价;金额</string>
    <string name="coffee">咖啡</string>
    <string name="tableware">消毒餐具</string>
    <string name="peanuts">油炸花生米</string>
    <string name="cucumber">蒜泥黄瓜</string>
    <string name="frog">干锅田鸡</string>
    <string name="rice">米饭</string>
    <string name="str_note">打印小票效果演示：</string>
    <string name="str_show">演示：</string>
    <string name="shop_receipt_num">单据</string>
    <string name="bags">保鲜袋</string>
    <string name="umbrella">雨伞</string>
    <string name="hook">铁丝挂钩</string>

    <string name="str_text">打印文本效果展示：</string>
    <string name="str_text_left">文字居左效果演示abc123：</string>
    <string name="str_text_right">文字居右效果演示abc123：</string>
    <string name="str_text_center">文字居中效果演示abc123：</string>
    <string name="str_text_strong">文字加粗效果演示abc123：</string>
    <string name="str_text_underline">文字下划线效果演示abc123：</string>
    <string name="str_text_print">效果演示abc123</string>
    <string name="str_text_height">同行不同高效果演示：：</string>
    <string name="times">倍</string>
    <string name="bigger">放大</string>
    <string name="bigger1">倍效果演示abc123</string>

    <string name="progress_update">正在升级…</string>
    <string name="progress_print">正在打印…</string>
    <string name="dialog_setting_update">升级固件</string>
    <string name="dialog_update_tips">升级过程发生中断可能导致打印机无法正常工作，确定升级固件吗？</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
</resources>
