<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_body">

    <TextView
        android:id="@+id/tv_text_note"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:drawableTop="@mipmap/text_note"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/text_note_ex"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tv_text_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text_code"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:drawableTop="@mipmap/text_code"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/text_code_ex"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tv_text_table"
        app:layout_constraintStart_toEndOf="@id/tv_text_note"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text_table"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:drawableTop="@mipmap/text_table"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/text_table_ex"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_text_code"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/text_body_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/bg_text_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/text_edit_title"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/text_body_img"
        app:layout_constraintTop_toTopOf="@id/text_body_img" />

    <CheckBox
        android:id="@+id/cb_text_hex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/text_check_hex"
        android:textColor="@color/black_text"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_title_text"
        app:layout_constraintEnd_toEndOf="@id/text_body_img"
        app:layout_constraintTop_toTopOf="@id/text_body_img" />

    <EditText
        android:id="@+id/et_text_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_text_edit"
        android:gravity="top"
        android:padding="8dp"
        android:text="@string/text_print_test"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btn_send_print"
        app:layout_constraintEnd_toEndOf="@id/text_body_img"
        app:layout_constraintStart_toStartOf="@id/text_body_img"
        app:layout_constraintTop_toTopOf="@id/text_body_img" />

    <Button
        android:id="@+id/btn_send_print"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_deep_blue_selector"
        android:text="@string/send_print"
        android:textColor="@color/white_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/text_body_img"
        app:layout_constraintEnd_toEndOf="@id/text_body_img"
        app:layout_constraintStart_toStartOf="@id/text_body_img"
        app:layout_constraintTop_toBottomOf="@id/et_text_content" />

</android.support.constraint.ConstraintLayout>