<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_body">

    <TextView
        android:id="@+id/tv_barcode_ex"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:drawableTop="@mipmap/barcode"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/barcode_print_ex"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tv_qrcode_ex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_qrcode_ex"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:drawableTop="@mipmap/qrcode"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/qr_code_print_ex"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tv_scan_print"
        app:layout_constraintStart_toEndOf="@id/tv_barcode_ex"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_scan_print"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:drawableTop="@mipmap/scan_barcode"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/scan_print_ex"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_qrcode_ex"
        app:layout_constraintTop_toTopOf="parent" />

    <com.shizhefei.view.indicator.ScrollIndicatorView
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_title_bar"
        android:paddingTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/barcode_body_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_barcode_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>